[gd_scene load_steps=16 format=3 uid="uid://cisnac45ahktu"]

[ext_resource type="Script" uid="uid://biwy7sv1gssh4" path="res://telas/minigames/bio_goods/scripts/control_drawing1.gd" id="1_0gn57"]
[ext_resource type="Texture2D" uid="uid://cf3c123jfevlx" path="res://telas/minigames/bio_goods/sprites/[AR] Hospital Assets - FREE/4. Samples/backgorund_2.png" id="1_0ko8k"]
[ext_resource type="Texture2D" uid="uid://curf5p2uk8sww" path="res://telas/minigames/bio_goods/textures/SBS - Tiny Texture Pack - 128x128/128x128/Wood/Wood_25-128x128.png" id="2_jrq7g"]
[ext_resource type="Texture2D" uid="uid://bfw41yihqn2sr" path="res://telas/minigames/bio_goods/sprites/cenarios colorir/cenario2.png" id="4_g8e2o"]
[ext_resource type="Shader" uid="uid://cb6x1yvv1uq26" path="res://telas/minigames/bio_goods/scene/desenho1.gdshader" id="5_g8e2o"]
[ext_resource type="Texture2D" uid="uid://20qux7gs1gby" path="res://telas/minigames/bio_goods/sprites/icones/back arrown.png" id="6_chrmv"]
[ext_resource type="Texture2D" uid="uid://c4pjsrwfn2yde" path="res://telas/minigames/bio_goods/sprites/icones/pincel.png" id="6_mifr6"]
[ext_resource type="Texture2D" uid="uid://bk8b4wqf12v5r" path="res://telas/minigames/bio_goods/sprites/icones/save icon.png" id="7_pj7v1"]
[ext_resource type="Texture2D" uid="uid://btvama1at1dhm" path="res://telas/minigames/bio_goods/sprites/icones/black-bucket-icon-download-1.png" id="7_rco25"]
[ext_resource type="Texture2D" uid="uid://d3hk2csv76e28" path="res://telas/minigames/bio_goods/sprites/icones/eraser.png" id="8_68jic"]
[ext_resource type="Texture2D" uid="uid://bohb3c1d211d4" path="res://telas/minigames/bio_goods/sprites/icones/redo-arrow.png" id="8_s0y3f"]
[ext_resource type="Texture2D" uid="uid://yve3l1t3iotm" path="res://telas/minigames/bio_goods/sprites/icones/bin.png" id="9_pg7lq"]
[ext_resource type="Texture2D" uid="uid://cngkfn20ku15u" path="res://telas/minigames/bio_goods/sprites/icones/color picker icon.png" id="9_q5f0i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mifr6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rco25"]
shader = ExtResource("5_g8e2o")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0gn57")
picker_path = NodePath("ColorIcon (TxTButton)/ColorPicker (Base)")
picker_icon_path = NodePath("ColorIcon (TxTButton)")

[node name="BG_Fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0115
anchor_top = -0.0111111
anchor_right = 1.03039
anchor_bottom = 1.02622
offset_left = 0.28
offset_right = 96.1199
offset_bottom = 635.68
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.882716, 0.630254)
texture = ExtResource("1_0ko8k")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="BG" type="Parallax2D" parent="."]
scroll_offset = Vector2(-1, -1)

[node name="BG_Moldura" type="Sprite2D" parent="BG"]
position = Vector2(362, 489)
scale = Vector2(5.48437, 5.54687)
texture = ExtResource("2_jrq7g")

[node name="Desenho" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_mifr6")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.142
anchor_right = 0.974
anchor_bottom = 0.764
offset_left = 0.24
offset_top = -0.360001
offset_right = -0.280029
offset_bottom = -0.120056
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_g8e2o")
expand_mode = 1

[node name="ColorLayer" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_rco25")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.142
anchor_right = 0.974
anchor_bottom = 0.764
offset_left = 0.24
offset_top = -0.360001
offset_right = -0.280029
offset_bottom = -0.120056
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ControlButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -296.0
offset_top = 19.0
offset_right = 3552.0
offset_bottom = 531.0
grow_horizontal = 2
scale = Vector2(0.15, 0.15)
theme_override_constants/separation = 600

[node name="Voltar_selecao" type="TextureButton" parent="ControlButtons"]
layout_mode = 2
texture_normal = ExtResource("6_chrmv")

[node name="Salvar_desenho" type="TextureButton" parent="ControlButtons"]
layout_mode = 2
texture_normal = ExtResource("7_pj7v1")

[node name="Avancar_desenho" type="TextureButton" parent="ControlButtons"]
layout_mode = 2
texture_normal = ExtResource("8_s0y3f")

[node name="Apagar_tudo" type="TextureButton" parent="ControlButtons"]
layout_mode = 2
texture_normal = ExtResource("9_pg7lq")

[node name="Pincel" type="TextureButton" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051
anchor_top = 0.854
anchor_right = 0.194
anchor_bottom = 0.949
offset_left = 0.279999
offset_top = -0.320007
offset_right = 409.32
offset_bottom = 409.08
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 4
texture_normal = ExtResource("6_mifr6")
stretch_mode = 0

[node name="Balde" type="TextureButton" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.282
anchor_top = 0.847
anchor_right = 0.435
anchor_bottom = 0.949
offset_left = -0.0400085
offset_top = 0.239929
offset_right = 89.8
offset_bottom = 90.08
scale = Vector2(0.55, 0.55)
texture_normal = ExtResource("7_rco25")

[node name="Borracha" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.537
anchor_top = 0.85
anchor_right = 0.68
anchor_bottom = 0.952
offset_left = 0.359985
offset_right = 409.4
offset_bottom = 439.84
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_68jic")

[node name="ColorIcon (TxTButton)" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.776
anchor_top = 0.855
anchor_right = 0.915
anchor_bottom = 0.947
offset_left = 0.279968
offset_top = -0.400024
offset_right = 100.2
offset_bottom = 100.24
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_q5f0i")

[node name="ColorPicker (Base)" type="ColorPickerButton" parent="ColorIcon (TxTButton)"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -490.0
offset_right = 4.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1
edit_alpha = false

[connection signal="pressed" from="ControlButtons/Voltar_selecao" to="." method="_on_voltar_selecao_pressed"]
[connection signal="pressed" from="ControlButtons/Apagar_tudo" to="." method="_on_apagar_tudo_pressed"]
[connection signal="pressed" from="Pincel" to="." method="_on_pincel_pressed"]
[connection signal="pressed" from="Balde" to="." method="_on_balde_pressed"]
[connection signal="pressed" from="Borracha" to="." method="_on_borracha_pressed"]
[connection signal="pressed" from="ColorIcon (TxTButton)" to="." method="_on_texture_button_pressed"]
[connection signal="color_changed" from="ColorIcon (TxTButton)/ColorPicker (Base)" to="." method="_on_color_picker_color_changed"]
